# ms-ai-agent-framework

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  setup.bat  setup.sh
agent_framework/: __init__.py  cli.py
agent_framework/backends/: autogen_backend.py  azure_agent_backend.py  factory.py  semantic_kernel_backend.py
agent_framework/config/: __init__.py  loader.py  schema.py
agent_framework/core/: __init__.py  base_agent.py  pipeline.py  tool_registry.py
agent_framework/deploy/: __init__.py  azure.py  docker.py  local.py
agent_framework/observability/: __init__.py  logger.py
agents/: docs_reader.yaml  example_azure.yaml  example_coder.yaml  example_pipeline.yaml  example_research.yaml
docs/: 01-setup.md  02-running-agents.md  03-creating-agents.md  04-tools.md  05-pipelines.md  06-deployment.md  07-windows.md  README.md
tests/: test_config.py  test_docs_crawler.py  test_factory.py  test_pipeline.py  test_tool_registry.py
tools/: docs_crawler.py  web_search.py
